--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "js-file-download": "^0.4.1",
     "material-icons-react": "^1.0.0",
     "moment": "^2.21.0",
     "normalize-scss": "^7.0.1",
