--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
+    "ramda": "^0.25.0",
     "react": "^16.3.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.3.1",
