--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai": "^4.1.2",
     "chalk": "1.1.3",
     "circular-dependency-plugin": "^5.0.1",
+    "content-disposition": "^0.5.2",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
