--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "jest": "20.0.4",
     "js-file-download": "^0.4.1",
     "material-icons-react": "^1.0.0",
-    "moment": "^2.21.0",
+    "moment": "^2.22.1",
     "normalize-scss": "^7.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -48,6 +48,7 @@
     "raf": "3.4.0",
     "ramda": "^0.25.0",
     "react": "^16.3.1",
+    "react-datepicker": "^1.4.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.3.1",
     "react-onclickoutside": "^6.7.1",
