--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "js-file-download": "^0.4.1",
+    "jspdf": "^1.3.5",
+    "jspdf-autotable": "^2.3.2",
     "material-icons-react": "^1.0.0",
     "moment": "^2.22.1",
     "normalize-scss": "^7.0.1",
