switch trigger to api call for ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,10 +76,15 @@ jobs:
       - run:
           name: Avoid hosts unknown for github
           command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-      - run: git config --global user.email "matthew@humanyze.com"
-      - run:   git config --global user.name "CI Matthew"
-      - run: git clone git@github.com:Humanyze/nginx-frontend.git .
-      - run: git commit --allow-empty -m 'Deployment $SHORT_COMMIT' && git push origin head
+#      - run: git config --global user.email "matthew@humanyze.com"
+#      - run:   git config --global user.name "CI Matthew"
+#      - run: git clone git@github.com:Humanyze/nginx-frontend.git .
+#      - run: git commit --allow-empty -m 'Deployment $SHORT_COMMIT' && git push origin head
+       - run: |
+            curl \
+              --header "Content-Type: application/json" \
+              --request POST \
+              https://circleci.com/api/v1.1/project/github/Humanyze/nginx-frontend/tree/$CIRCLE_BRANCH?circle-token=$TRIGGER_TOKEN
 
 workflows:
   version: 2
