--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = src/assets/scss/humanyze-ui
 	url = https://github.com/Humanyze/humanyze-ui-scss.git
 	branch = master
+[submodule "src/components/common"]
+	path = src/components/common
+	url = https://github.com/Humanyze/humanyze-react-components.git
