--- a/package.json
+++ b/package.json
@@ -88,7 +88,6 @@
     "storybook": "start-storybook -p 9001 -c .storybook -s ./public",
     "build-storybook": "build-storybook -c .storybook -o .out",
     "common-docs": "jsdoc -c ./src/components/common/jsdoc.conf ./src/components/common/ -r -d ./src/components/common/docs"
-
   },
   "babel": {
     "presets": [
@@ -108,6 +107,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
+    "jsdoc": "^3.5.5",
     "node-sass": "^4.8.2",
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.7",
