--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "classnames": "^2.2.5",
     "content-disposition": "^0.5.2",
     "css-loader": "0.28.7",
+    "d3-axis": "^1.0.12",
+    "d3-force": "^1.1.2",
+    "d3-scale": "^2.1.2",
+    "d3-selection": "^1.3.2",
+    "d3-shape": "^1.2.2",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^4.18.2",
@@ -40,6 +45,7 @@
     "jspdf": "^1.3.5",
     "jspdf-autotable": "^2.3.2",
     "kuker-emitters": "^6.7.4",
+    "lodash.isequal": "^4.5.0",
     "material-icons-react": "^1.0.0",
     "moment": "^2.22.1",
     "normalize-scss": "^7.0.1",
@@ -50,6 +56,7 @@
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "ramda": "^0.25.0",
+    "rc-tooltip": "^3.7.3",
     "react": "^16.3.1",
     "react-datepicker": "^1.4.1",
     "react-dev-utils": "^5.0.0",
@@ -59,6 +66,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scroll-horizontal": "^1.2.1",
+    "react-sizeme": "^2.5.2",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
@@ -70,6 +78,7 @@
     "rxjs": "^5.5.8",
     "sinon-chai": "^2.14.0",
     "style-loader": "0.19.0",
+    "styled-components": "^3.4.9",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
