--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-datepicker": "^1.4.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.3.1",
+    "react-ga": "^2.5.3",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
