--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "moment": "^2.21.0",
     "normalize-scss": "^7.0.1",
     "object-assign": "4.1.1",
+    "path-to-regexp": "^2.4.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
@@ -70,7 +71,7 @@
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.0",
     "react-scroll-horizontal": "^1.2.1",
     "react-sizeme": "^2.5.2",
     "recompose": "^0.26.0",
