--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "rc-tooltip": "^3.7.3",
     "react": "^16.3.1",
     "react-datepicker": "^1.5.0",
+    "react-dates": "^18.2.2",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.3.1",
     "react-onclickoutside": "^6.7.1",
