--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "normalize-scss": "^7.0.1",
     "object-assign": "4.1.1",
     "path-to-regexp": "^2.4.0",
+    "pluralize": "^7.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
