--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
           at: /tmp/app
       - run: cp -r /tmp/app/app/. .
       - run: yarn test
+      - run: npx eslint src/
 
   package:
     working_directory: ~/app
