--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
     "tabWidth": 2,
-    "singleQuotes": true,
+    "singleQuote": true,
     "jsxSingleQuote": true,
     "trailingComma": "es5",
     "arrowParens": "always",
