--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.0",
     "react-scroll-horizontal": "^1.2.1",
+    "react-scroll-into-view-if-needed": "^2.1.6",
     "react-sizeme": "^2.5.2",
     "react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "recompose": "^0.26.0",
