--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
     "jsxSingleQuote": true,
     "trailingComma": "es5",
     "arrowParens": "always",
-    "endOfLine": "lf"
+    "endOfLine": "lf",
+    "printWidth": 150
 }
