change imports and delete outdated anagement system

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/redux/common"]
 	path = src/redux/common
 	url = https://github.com/Humanyze/redux-common.git
+[submodule "src/elements-web-common"]
+	path = src/elements-web-common
+	url = https://github.com/Humanyze/elements-web-common.git
