--- a/.eslintrc
+++ b/.eslintrc
@@ -1,68 +1,3 @@
-// NOTE: to run eslint fix,
-// bash: npx eslint --fix .
 {
-  "extends": ["eslint:recommended", "react-app"],
-  "plugins": ["react"],
-  "rules": {
-    "object-curly-spacing": ["warn", "always"],
-    "semi": ["warn", "always"],
-    "quotes": ["warn", "single"],
-    "jsx-quotes": ["warn", "prefer-single"],
-    "space-infix-ops": ["warn", {}],
-    "array-bracket-newline": [
-      "warn",
-      {
-        "multiline": true,
-        "minItems": 2
-      }
-    ],
-    "array-bracket-spacing": [
-      "warn",
-      "always"
-    ],
-    "array-element-newline": [
-      "warn",
-      "always"
-    ],
-    "block-spacing": "warn",
-    "comma-dangle": [
-      "error", {
-        "arrays": "always",
-        "objects": "always"
-      }
-    ],
-    "prefer-const": "warn",
-    "no-var": "error",
-    "prefer-spread": "warn",
-    "prefer-rest-params": "warn",
-    "prefer-template": "error",
-    "no-console": "off",
-    "no-debugger": "warn",
-    "no-alert": "error",
-    "no-eq-null": "warn",
-    "no-param-reassign": "error",
-    "require-await": "error",
-    "no-undef-init": "error",
-    "no-use-before-define": "error",
-    "eol-last": [
-      "error",
-      "always"
-    ],
-    "func-call-spacing": "error",
-    "implicit-arrow-linebreak": "warn",
-    "key-spacing": [
-      "warn",
-      {}
-    ],
-    "keyword-spacing": "warn",
-    "no-trailing-spaces": "warn",
-    "no-multi-assign": "error",
-    "operator-assignment": "error",
-    "arrow-spacing": "warn",
-    "arrow-parens": "warn"
-    // "indent": [
-    //   "warn",
-    //   2
-    // ]
-  }
+  "extends": "eslint-config-humanyze"
 }
