--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "d3-time-format": "^2.1.1",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^4.18.2",
+    "eslint": "^5.13.0",
+    "eslint-config-humanyze": "^1.0.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
