--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "react-scroll-horizontal": "^1.2.1",
     "react-scroll-into-view-if-needed": "^2.1.6",
     "react-sizeme": "^2.5.2",
-    "react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
+    "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
