--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "css-loader": "0.28.7",
     "d3-axis": "^1.0.12",
     "d3-force": "^1.1.2",
-    "d3-scale": "^3.0.0",
+    "d3-scale": "2.1.0",
     "d3-selection": "^1.3.2",
     "d3-shape": "^1.2.2",
     "dotenv": "4.0.0",
