add style changes to wrappers

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
+    "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "@redux-offline/redux-offline": "^2.3.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
@@ -73,13 +74,13 @@
     "react-dom": "^16.3.1",
     "react-ga": "^2.5.6",
     "react-onclickoutside": "^6.7.1",
+    "react-pose": "^4.0.8",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.0",
     "react-scroll-horizontal": "^1.2.1",
     "react-scroll-into-view-if-needed": "^2.1.6",
     "react-sizeme": "^2.5.2",
-    "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
