--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "browser-detect": "^0.2.28",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chai": "^4.1.2",
     "chalk": "1.1.3",
@@ -23,7 +24,7 @@
     "classnames": "^2.2.6",
     "content-disposition": "^0.5.2",
     "css-loader": "0.28.7",
-    "d3": "3.5.17",
+    "d3": "4",
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
     "d3-force": "1.1.0",
