--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,3 @@
-[submodule "src/assets/scss/humanyze-ui"]
-	path = src/assets/scss/humanyze-ui
-	url = https://github.com/Humanyze/humanyze-ui-scss.git
-	branch = master
-[submodule "src/components/common"]
-	path = src/components/common
-	url = https://github.com/Humanyze/humanyze-react-components.git
-[submodule "src/redux/common"]
-	path = src/redux/common
-	url = https://github.com/Humanyze/redux-common.git
+[submodule "src/elements-web-common"]
+	path = src/elements-web-common
+	url = https://github.com/Humanyze/elements-web-common.git
