--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "elements-deployment-dashboard",
-  "version": "1.1.0",
+  "name": "elements-config",
+  "version": "1.2.0",
   "private": true,
   "homepage": "http://localhost:81/deployments",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
+    "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "@redux-offline/redux-offline": "^2.3.2",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.8",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
@@ -15,21 +20,30 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "browser-detect": "^0.2.28",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chai": "^4.1.2",
     "chalk": "1.1.3",
     "circular-dependency-plugin": "^5.0.1",
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "content-disposition": "^0.5.2",
     "css-loader": "0.28.7",
-    "d3-axis": "^1.0.12",
-    "d3-force": "^1.1.2",
-    "d3-scale": "2.1.0",
-    "d3-selection": "^1.3.2",
-    "d3-shape": "^1.2.2",
+    "d3": "^5.9.1",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-force": "1.1.0",
+    "d3-force-reuse": "^1.0.1",
+    "d3-format": "^1.3.0",
+    "d3-hierarchy": "1.1.4",
+    "d3-scale": "^2.1.0",
+    "d3-scale-chromatic": "^1.3.0",
+    "d3-selection": "^1.3.0",
+    "d3-shape": "1.2.0",
+    "d3-time-format": "^2.1.1",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^4.18.2",
+    "eslint": "^5.13.0",
+    "eslint-config-humanyze": "^1.0.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
@@ -42,33 +56,39 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "js-file-download": "^0.4.1",
-    "jspdf": "^1.3.5",
-    "jspdf-autotable": "^2.3.2",
-    "kuker-emitters": "^6.7.4",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.2.4",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
-    "material-icons-react": "^1.0.0",
-    "moment": "^2.22.1",
+    "material-icons-react": "1.0.2",
+    "mixpanel-browser": "^2.22.4",
+    "moment": "^2.21.0",
     "normalize-scss": "^7.0.1",
     "object-assign": "4.1.1",
+    "path-to-regexp": "^2.4.0",
+    "pluralize": "^7.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "ramda": "^0.25.0",
+    "raven-js": "^3.26.4",
     "rc-tooltip": "^3.7.3",
     "react": "^16.3.1",
-    "react-datepicker": "^1.4.1",
+    "react-datepicker": "^1.5.0",
+    "react-dates": "^18.2.2",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.3.1",
-    "react-ga": "^2.5.3",
+    "react-ga": "^2.5.6",
     "react-onclickoutside": "^6.7.1",
+    "react-pose": "^4.0.8",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.0",
     "react-scroll-horizontal": "^1.2.1",
+    "react-scroll-into-view-if-needed": "^2.1.6",
     "react-sizeme": "^2.5.2",
-    "react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
@@ -80,10 +100,10 @@
     "rxjs": "^5.5.8",
     "sinon-chai": "^2.14.0",
     "style-loader": "0.19.0",
-    "styled-components": "^3.4.9",
+    "styled-components": "^3.4.2",
     "sw-precache-webpack-plugin": "0.11.4",
+    "typescript": "^3.5.3",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "webpack-visualizer-plugin": "^0.1.11",
@@ -102,7 +122,8 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app",
+      "flow"
     ]
   },
   "eslintConfig": {
@@ -118,11 +139,14 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
-    "jsdoc": "^3.5.5",
+    "eslint-watch": "^4.0.2",
+    "jsdoc-webpack-plugin-v2": "^2.0.2",
     "node-sass": "^4.8.2",
+    "react-styleguidist": "^7.0.16",
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "^1.3.3",
-    "storybook": "^1.0.0"
+    "storybook": "^1.0.0",
+    "webpack": "^3.8.1"
   }
 }
