--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: /tmp/app
     docker:
-      - image: circleci/node:8.9.2
+      - image: circleci/node:10.11
     steps:
       - run: echo $CIRCLE_BRANCH && pwd && ls
       - checkout
@@ -30,28 +30,30 @@ jobs:
   test:
     working_directory: ~/test
     docker:
-      - image: circleci/node:8.9.2
+      - image: circleci/node:10.11
     steps:
       - attach_workspace:
           at: /tmp/app
       - run: cp -r /tmp/app/app/. .
       - run: yarn test
-
+      - run: npx eslint --max-warnings 0 src/
 
   package:
     working_directory: ~/app
     docker:
-      - image: circleci/node:8.9.2-stretch
+      - image: circleci/node:10.12-stretch
     steps:
       - attach_workspace:
           at: /tmp/app
 
       - run: cp -r /tmp/app/app/. .
 
+
       # AWS CLI Setup
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
+      - run: sudo apt-get update
+      - run: sudo apt-get -y -qq update && sudo apt-get install -y -qq python3.5-dev
       - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
+      - run: sudo python3.5 get-pip.py
       - run: sudo pip install awscli --upgrade
 
       # Build and S3 Deploy
@@ -61,29 +63,18 @@ jobs:
 
       # Storybook Deploy
       - run: yarn run build-storybook
-      - run: |
-          if [ "$CIRCLE_BRANCH" == "develop" ]; then
-            aws s3 sync .out/ s3://develop-deployment-storybook.humanyze.com --delete
-          fi
-      - run: yarn run common-docs
-      - run: |
-          if [ "$CIRCLE_BRANCH" == "develop" ]; then
-            aws s3 sync ./src/components/common/docs/ s3://react-common-docs.humanyze.com --delete
-          fi
-
-
+      - run: aws s3 sync .out/ s3://dev-storybook.humanyze.com --delete
   ## Note: This will be shared across micros
   trigger_nginx:
     working_directory: ~/nginx
     docker:
-      - image: circleci/node:8.9.2
+      - image: circleci/node:10.11
     steps:
       - run: |
           curl \
             --header "Content-Type: application/json" \
             --request POST \
             https://circleci.com/api/v1.1/project/github/Humanyze/nginx-frontend/tree/$CIRCLE_BRANCH?circle-token=$TRIGGER_TOKEN
-
 workflows:
   version: 2
   # linear workflow,
@@ -107,5 +98,5 @@ workflows:
           filters:
             branches:
               only:
- #               - master
+#                - master
                 - develop
