Changes to the Docker Container and a compilable version of the deployment micro

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
     "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
+    "@material-ui/core": "^4.4.1",
     "@redux-offline/redux-offline": "^2.3.2",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
@@ -43,7 +44,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^5.13.0",
-    "eslint-config-humanyze": "^1.0.0",
+    "eslint-config-humanyze": "^1.0.3",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
@@ -66,6 +67,7 @@
     "normalize-scss": "^7.0.1",
     "object-assign": "4.1.1",
     "path-to-regexp": "^2.4.0",
+    "papaparse": "^5.0.2",
     "pluralize": "^7.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
