--- a/package.json
+++ b/package.json
@@ -9,18 +9,12 @@
     "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "@material-ui/core": "^4.4.1",
     "@redux-offline/redux-offline": "^2.3.2",
-    "@types/jest": "^24.0.15",
+    "@types/jest": "^24.0.25",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
     "browser-detect": "^0.2.28",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chai": "^4.1.2",
@@ -44,7 +38,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^5.13.0",
-    "eslint-config-humanyze": "^1.0.3",
+    "eslint-config-humanyze": "^1.0.4",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
@@ -52,10 +46,11 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
+    "fast-memoize": "^2.5.1",
+    "file-loader": "1.1.6",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "jest": "24.9.0",
     "js-file-download": "^0.4.1",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.2.4",
@@ -66,8 +61,8 @@
     "moment": "^2.21.0",
     "normalize-scss": "^7.0.1",
     "object-assign": "4.1.1",
-    "path-to-regexp": "^2.4.0",
     "papaparse": "^5.0.2",
+    "path-to-regexp": "^2.4.0",
     "pluralize": "^7.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -117,8 +112,10 @@
   "scripts": {
     "start": "node scripts/start.js --env=jsdom",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "storybook": "start-storybook -p 9001 -c .storybook -s ./public",
+    "test": "./cscripts/test",
+    "test:container": "node scripts/test.js --env=jsdom",
+    "storybook": "./cscripts/storybook",
+    "storybook:container": "start-storybook -p 9003 -c .storybook -s ./public",
     "build-storybook": "build-storybook -c .storybook -o .out",
     "common-docs": "jsdoc -c ./src/components/common/jsdoc.conf ./src/components/common/ -r -d ./src/components/common/docs"
   },
@@ -126,16 +123,29 @@
     "presets": [
       "react-app",
       "flow"
+    ],
+    "plugins": [
+      "macros"
     ]
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.15",
-    "@storybook/addon-knobs": "^3.4.0",
-    "@storybook/addon-viewport": "^3.3.15",
-    "@storybook/react": "^3.4.0",
+    "@babel/core": "^7.7.7",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "24.9.0",
+    "babel-loader": "8.0.6",
+    "babel-preset-react-app": "^9.1.0",
+    "babel-runtime": "6.26.0",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-storyshots": "^5.2.8",
+    "@storybook/addon-viewport": "^5.2.8",
+    "@storybook/react": "^5.2.8",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-flow": "^6.23.0",
     "chai-as-promised": "^7.1.1",
     "chai-enzyme": "^0.8.0",
     "enzyme": "^3.3.0",
@@ -145,10 +155,12 @@
     "jsdoc-webpack-plugin-v2": "^2.0.2",
     "node-sass": "^4.8.2",
     "react-styleguidist": "^7.0.16",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^16.12.0",
+    "regenerator-runtime": "^0.13.3",
+    "require-context.macro": "^1.2.2",
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "^1.3.3",
-    "storybook": "^1.0.0",
+    "storybook": "^5.1.11",
     "webpack": "^3.8.1"
   }
 }
