--- a/package.json
+++ b/package.json
@@ -1,166 +1,113 @@
 {
-  "name": "elements-config",
-  "version": "1.2.0",
+  "name": "deployment-dashboard",
+  "version": "0.2.0",
   "private": true,
-  "homepage": "http://localhost:81/deployments",
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.4",
-    "@fortawesome/react-fontawesome": "^0.0.17",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
-    "@material-ui/core": "^4.4.1",
-    "@redux-offline/redux-offline": "^2.3.2",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^12.6.8",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "autoprefixer": "7.1.6",
-    "axios": "^0.18.0",
+    "@material-ui/core": "^4.8.3",
+    "@redux-offline/redux-offline": "^2.5.2",
+    "@storybook/addon-actions": "^5.3.0",
+    "@storybook/addon-knobs": "^5.3.0",
+    "@storybook/addon-links": "^5.3.4",
+    "@storybook/addon-storyshots": "^5.3.0",
+    "@storybook/addon-viewport": "^5.3.0",
+    "@storybook/react": "^5.3.0",
     "browser-detect": "^0.2.28",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chai": "^4.1.2",
-    "chalk": "1.1.3",
-    "circular-dependency-plugin": "^5.0.1",
-    "classnames": "^2.2.6",
-    "content-disposition": "^0.5.2",
-    "css-loader": "0.28.7",
-    "d3": "^5.9.1",
-    "d3-array": "^1.2.1",
-    "d3-axis": "^1.0.8",
-    "d3-force": "1.1.0",
+    "chai": "^4.2.0",
+    "d3": "^5.15.0",
+    "d3-array": "^2.4.0",
+    "d3-axis": "^1.0.12",
+    "d3-force": "2.0.1",
     "d3-force-reuse": "^1.0.1",
-    "d3-format": "^1.3.0",
-    "d3-hierarchy": "1.1.4",
-    "d3-scale": "^2.1.0",
-    "d3-scale-chromatic": "^1.3.0",
-    "d3-selection": "^1.3.0",
-    "d3-shape": "1.2.0",
-    "d3-time-format": "^2.1.1",
-    "dotenv": "4.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^5.13.0",
+    "d3-format": "^1.4.3",
+    "d3-hierarchy": "1.1.9",
+    "d3-scale": "^3.2.1",
+    "d3-scale-chromatic": "^1.5.0",
+    "d3-selection": "^1.4.1",
+    "d3-shape": "1.3.7",
+    "d3-time-format": "^2.2.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-humanyze": "^1.0.4",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "3.0.2",
     "fast-memoize": "^2.5.1",
-    "file-loader": "1.1.6",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "24.9.0",
-    "js-file-download": "^0.4.1",
-    "jspdf": "^1.5.3",
-    "jspdf-autotable": "^3.2.4",
-    "lodash.clonedeep": "^4.5.0",
+    "html2canvas": "^1.0.0-rc.5",
+    "js-file-download": "^0.4.9",
     "lodash.isequal": "^4.5.0",
-    "material-icons-react": "1.0.2",
-    "mixpanel-browser": "^2.22.4",
-    "moment": "^2.21.0",
+    "material-icons-react": "^1.0.4",
+    "moment-locales-webpack-plugin": "^1.1.2",
+    "node-sass": "^4.13.0",
     "normalize-scss": "^7.0.1",
-    "object-assign": "4.1.1",
-    "papaparse": "^5.0.2",
-    "path-to-regexp": "^2.4.0",
-    "pluralize": "^7.0.0",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
-    "promise": "8.0.1",
-    "prop-types": "^15.6.1",
-    "raf": "3.4.0",
-    "ramda": "^0.25.0",
-    "raven-js": "^3.26.4",
-    "rc-tooltip": "^3.7.3",
-    "react": "^16.8.0",
-    "react-datepicker": "^1.5.0",
-    "react-dates": "^18.2.2",
-    "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.8.0",
-    "react-ga": "^2.5.6",
-    "react-onclickoutside": "^6.7.1",
-    "react-pose": "^4.0.8",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.3.0",
-    "react-scroll-horizontal": "^1.2.1",
-    "react-scroll-into-view-if-needed": "^2.1.6",
-    "react-sizeme": "^2.5.2",
-    "recompose": "^0.26.0",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.3.0",
-    "redux-axios-middleware": "^4.0.0",
+    "papaparse": "^5.1.1",
+    "pluralize": "^8.0.0",
+    "rc-tooltip": "^4.0.0-alpha.3",
+    "react": "^16.12.0",
+    "react-app-rewired": "^2.1.5",
+    "react-datepicker": "^2.11.0",
+    "react-dates": "^21.5.1",
+    "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
+    "react-moment-proptypes": "^1.7.0",
+    "react-pose": "^4.0.10",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-scroll-into-view-if-needed": "^2.1.7",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-axios-middleware": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-observable": "^0.18.0",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1",
-    "rxjs": "^5.5.8",
-    "sinon-chai": "^2.14.0",
-    "style-loader": "0.19.0",
-    "styled-components": "^3.4.2",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "typescript": "^3.5.3",
-    "url-loader": "0.6.2",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "webpack-visualizer-plugin": "^0.1.11",
-    "whatwg-fetch": "2.0.3"
-  },
-  "optionalDependencies": {
-    "fsevents": "*"
+    "redux-observable": "^1.2.0",
+    "redux-thunk": "^2.3.0",
+    "require-context.macro": "^1.2.2",
+    "reselect": "^4.0.0",
+    "sass-loader": "^8.0.1",
+    "storybook": "^5.3.0",
+    "storybook-react-router": "^1.0.8",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js --env=jsdom",
-    "build": "node scripts/build.js",
-    "test": "./cscripts/test",
-    "test:container": "node scripts/test.js --env=jsdom",
-    "storybook": "./cscripts/storybook",
-    "storybook:container": "start-storybook -p 9003 -c .storybook -s ./public",
-    "build-storybook": "build-storybook -c .storybook -o .out",
-    "common-docs": "jsdoc -c ./src/components/common/jsdoc.conf ./src/components/common/ -r -d ./src/components/common/docs"
-  },
-  "babel": {
-    "presets": [
-      "react-app",
-      "flow"
-    ],
-    "plugins": [
-      "macros"
-    ]
+    "start": "PORT=3001 react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "test:debug": "react-app-rewired --inspect-brk test --runInBand --no-cache --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "eslint-config-humanyze"
   },
-  "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-preset-react-app": "^9.1.0",
-    "babel-runtime": "6.26.0",
-    "@storybook/addon-actions": "^5.2.8",
-    "@storybook/addon-knobs": "^5.2.8",
-    "@storybook/addon-storyshots": "^5.2.8",
-    "@storybook/addon-viewport": "^5.2.8",
-    "@storybook/react": "^5.2.8",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-flow": "^6.23.0",
-    "chai-as-promised": "^7.1.1",
-    "chai-enzyme": "^0.8.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.1",
-    "eslint-watch": "^4.0.2",
-    "jsdoc-webpack-plugin-v2": "^2.0.2",
-    "node-sass": "^4.8.2",
-    "react-styleguidist": "^7.0.16",
-    "react-test-renderer": "^16.12.0",
-    "regenerator-runtime": "^0.13.3",
-    "require-context.macro": "^1.2.2",
-    "sass-loader": "^6.0.7",
-    "sass-resources-loader": "^1.3.3",
-    "storybook": "^5.1.11",
-    "webpack": "^3.8.1"
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,mjs}",
+      "!src/**/*.story.js",
+      "!src/tests/**"
+    ],
+    "moduleNameMapper": {
+      "^Common(.*)$": "<rootDir>/src/components/common$1",
+      "^appPackageJson": "<rootDir>/package.json",
+      "^Src(.*)$": "<rootDir>/src$1",
+      "^Public(.*)$": "<rootDir>/public$1",
+      "^Assets(.*)$": "<rootDir>/src/assets$1",
+      "^Redux([a-z/]*)$": "<rootDir>/src/redux$1",
+      "^ReduxCommon(.*)$": "<rootDir>/src/elements-web-common/redux$1",
+      "^Utils(.*)$": "<rootDir>/src/elements-web-common/assets/utils$1",
+      "^TestUtils(.*)$": "<rootDir>/src/tests$1",
+      "^ElementsWebCommon(.*)$": "<rootDir>/src/elements-web-common$1",
+      "^RouterPaths": "<rootDir>/src/routerPaths.js"
+    }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
