--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@storybook/addon-links": "^5.3.4",
     "@storybook/addon-storyshots": "^5.3.0",
     "@storybook/addon-viewport": "^5.3.0",
+    "@storybook/preset-create-react-app": "^1.5.2",
     "@storybook/react": "^5.3.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "browser-detect": "^0.2.28",
     "chai": "^4.2.0",
+    "circular-dependency-plugin": "^5.2.0",
     "d3": "^5.15.0",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
