Storybook Addons and react-table dependency
Added the addon-console which might be working?
Updated react-dates initialization
eslint made itself happy with reformatting :-(

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "@material-ui/core": "^4.8.3",
     "@redux-offline/redux-offline": "^2.5.2",
-    "@storybook/addon-actions": "^5.3.0",
+    "@storybook/addon-actions": "^5.3.9",
+    "@storybook/addon-console": "^1.2.1",
     "@storybook/addon-knobs": "^5.3.0",
     "@storybook/addon-links": "^5.3.4",
     "@storybook/addon-storyshots": "^5.3.0",
@@ -56,6 +57,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scroll-into-view-if-needed": "^2.1.7",
+    "react-table": "^7.0.0-rc.15",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
