--- a/package.json
+++ b/package.json
@@ -8,14 +8,8 @@
     "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "@material-ui/core": "^4.8.3",
     "@redux-offline/redux-offline": "^2.5.2",
-    "@storybook/addon-actions": "^5.3.9",
-    "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-knobs": "^5.3.0",
-    "@storybook/addon-links": "^5.3.4",
-    "@storybook/addon-storyshots": "^5.3.0",
-    "@storybook/addon-viewport": "^5.3.0",
-    "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.0",
+    "@sambego/storybook-state": "^2.0.1",
+    "@sentry/browser": "^5.12.0",
     "browser-detect": "^0.2.28",
     "chai": "^4.2.0",
     "circular-dependency-plugin": "^5.2.0",
@@ -38,6 +32,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "js-file-download": "^0.4.9",
     "lodash.isequal": "^4.5.0",
+    "match-sorter": "^4.0.2",
     "material-icons-react": "^1.0.4",
     "moment-locales-webpack-plugin": "^1.1.2",
     "node-sass": "^4.13.0",
@@ -58,6 +53,8 @@
     "react-scripts": "3.3.0",
     "react-scroll-into-view-if-needed": "^2.1.7",
     "react-table": "^7.0.0-rc.15",
+    "react-virtualized": "^9.21.2",
+    "react-window": "^1.8.5",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
@@ -118,5 +115,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^5.3.9",
+    "@storybook/addon-console": "^1.2.1",
+    "@storybook/addon-knobs": "^5.3.0",
+    "@storybook/addon-links": "^5.3.4",
+    "@storybook/addon-storyshots": "^5.3.0",
+    "@storybook/addon-viewport": "^5.3.0",
+    "@storybook/preset-create-react-app": "^1.5.2",
+    "@storybook/react": "^5.3.0",
+    "namor": "^2.0.2"
   }
 }
