--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scroll-into-view-if-needed": "^2.1.7",
+    "react-sortable-hoc": "^1.11.0",
     "react-table": "^7.0.0-rc.15",
     "react-virtualized": "^9.21.2",
     "react-window": "^1.8.5",
