--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.7.4",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
@@ -13,11 +12,6 @@
     "@svgr/webpack": "4.3.3",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.5",
-    "babel-preset-react-app": "^9.1.0",
     "browser-detect": "^0.2.28",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
@@ -55,10 +49,6 @@
     "html-webpack-plugin": "4.0.0-beta.5",
     "html2canvas": "^1.0.0-rc.5",
     "identity-obj-proxy": "3.0.0",
-    "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.2",
     "js-file-download": "^0.4.9",
     "lodash.isequal": "^4.5.0",
     "lodash.size": "^4.2.0",
@@ -89,7 +79,9 @@
     "react-pose": "^4.0.10",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
     "react-scroll-into-view-if-needed": "^2.1.7",
+    "react-sizeme": "^2.6.12",
     "react-sortable-hoc": "^1.11.0",
     "react-table": "^7.0.0-rc.15",
     "react-virtualized": "^9.21.2",
@@ -123,8 +115,8 @@
     "start": "PORT=3000 PUBLIC_URL=/deployment node scripts/start",
     "build": "node scripts/build",
     "test": "node scripts/test --env=jsdom",
-    "test:container": "node scripts/test --env=jsdom --runInBand",
-    "test:debug": "node --inspect-brk scripts/test --runInBand --no-cache --env=jsdom",
+    "test:container": "node scripts/test --env=jsdom --runInBand --coverage --collectCoverageFrom  src/",
+    "test:debug": "node --inspect-brk scripts/test --runInBand --no-cache --env=jsdom  --coverage --collectCoverageFrom  src/",
     "storybook": "./cscripts/storybook",
     "storybook:container": "start-storybook -p 9003 -c .storybook -s ./public --ci",
     "build-storybook": "build-storybook -c .storybook -o .out",
@@ -132,70 +124,6 @@
   },
   "eslintConfig": {
     "extends": "eslint-config-humanyze"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}",
-      "!src/**/*.story.js",
-      "!src/tests/**"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [
-      "/Users/mark/dev/humanyze/client-docker/deployment-dashboard/src"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
-      "^Common(.*)$": "<rootDir>/src/components/common$1",
-      "^appPackageJson": "<rootDir>/package.json",
-      "^Src(.*)$": "<rootDir>/src$1",
-      "^Public(.*)$": "<rootDir>/public$1",
-      "^Assets(.*)$": "<rootDir>/src/assets$1",
-      "^Redux([a-z/]*)$": "<rootDir>/src/redux$1",
-      "^ReduxCommon(.*)$": "<rootDir>/src/elements-web-common/redux$1",
-      "^Utils(.*)$": "<rootDir>/src/elements-web-common/assets/utils$1",
-      "^TestUtils(.*)$": "<rootDir>/src/tests$1",
-      "^ElementsWebCommon(.*)$": "<rootDir>/src/elements-web-common$1",
-      "^RouterPaths": "<rootDir>/src/routerPaths.js"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ]
   },
   "browserslist": {
     "production": [
@@ -210,6 +138,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "7.8.4",
     "@sambego/storybook-state": "^2.0.1",
     "@storybook/addon-actions": "^5.3.9",
     "@storybook/addon-console": "^1.2.1",
@@ -219,16 +148,19 @@
     "@storybook/addon-viewport": "^5.3.0",
     "@storybook/preset-create-react-app": "^1.5.2",
     "@storybook/react": "^5.3.0",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "^25.1.0",
+    "babel-loader": "8.0.6",
+    "babel-plugin-named-asset-import": "^0.3.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react-app": "^9.1.0",
+    "jest": "^25.1.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-resolve": "^25.1.0",
+    "jest-watch-typeahead": "0.4.2",
     "namor": "^2.0.2",
     "sass-loader": "^8.0.1",
     "storybook": "^5.3.0",
     "storybook-react-router": "^1.0.8"
-  },
-  "babel": {
-    "presets": [
-      "react-app",
-      "@babel/react",
-      "@babel/env"
-    ]
   }
 }
